yiltc-v0.2-backup/testsuite/negative/arrow_local_fn.yilt
// Negative: arrow syntax on a local named function (let fn) is rejected.
fn main()
    let fn helper(x int) -> int
        return x * 2
    print(helper(21))
